Fixed date and time bold display, add description text overflow

--- a/Webpages/Reminder Page/styles.css
+++ b/Webpages/Reminder Page/styles.css
@@ -114,7 +114,7 @@ body {
 }
 
 /* Style for the Create New Reminder button */
-.create-button {
+.create-reminder-button {
     background-color: #ffffff;
     height: 50px;
     color: #000000;
@@ -128,18 +128,18 @@ body {
     margin-right: 40px;
 }
 
-.create-button:hover {
+.create-reminder-button:hover {
     background-color: #e7e7e7;
 }
 
 .search-container {
     flex: 1;
-    display: flex;
+    display: inline-block;
     align-items: center;
 }
 
 /* Style for the search input */
-.hs-search-field__input {
+.reminder-search-field-input {
     width: 100%;
     height: 50px;
     font-size: 14px;
@@ -151,9 +151,8 @@ body {
     border: 1px solid #b3b3b3;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     border-radius: 10px;
+    animation: typing 1s forward;
 }
-
-
 
 
 
@@ -207,6 +206,11 @@ body {
     font-weight: bold;
 }
 
+.reminder-type-priority {
+    align: left;
+}
+
+
 /* General styling for ellipses */
 .reminder-user-type, .reminder-user-priority {
     display: inline-block;
@@ -250,9 +254,13 @@ body {
 
 
 
-/* reminder footer contents */
-.underline-label {
+/* reminder details contents */
+.reminder-description {
     text-decoration: underline;
+    width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 
